--- a/index.html
+++ b/index.html
@@ -139,9 +139,8 @@ footer {
 <section id="contact">
     <h2>Contact Us</h2>
     <div class="contact-box">
-        <p><strong>Email:</strong> deepaksolutions@email.com</p>
-        <p><strong>Phone:</strong> +91 90000 00000</p>
-        <p><strong>Location:</strong> Madurai, Tamil Nadu</p>
+        <p><strong>Email:</strong> deepak.ngrok@gmail.com</p>
+        <p><strong>Location:</strong> Madurai,Tamil Nadu , India</p>
     </div>
 </section>
 
